# shima10-x1p.github.io

./: .gitignore  AGENTS.md  CNAME  Dockerfile  README.md  about-page-renewal.html  docker-compose.yml  index.html  main.py  package-lock.json  package.json  pelicanconf.py  pnpm-lock.yaml  publishconf.py  pyproject.toml  robot.txt  tailwind.config.js  theme-sample.html  tsconfig.app.json  vite.config.js
.github/: copilot-instructions.md
.github/hooks/: python-quality.json  session-setup.json
.github/instructions/: project.instructions.md
.github/scripts/: copilot-post-edit.ps1  copilot-post-edit.sh  copilot-session-start.ps1  copilot-session-start.sh
.github/workflows/: deploy.yml  pelican.yml
assets/: index-BQtyKtf-.js  index-Dbd2yjQd.css
content/: fast-post.md  sample-post.md
content/bottles/pelican-tips/: 001.md  002.md  003.md  (+2 more)
content/extra/: CNAME
content/pages/: about.md  profile.md
docs/: plan-bottles.md
output/: archives.html  authors.html  categories.html  first-post.html  index.html  tags.html  zui-chu-notou-gao.html
output/author/: shimashima10-x1p.html
output/category/: diary.html  misc.html
output/pages/: about.html  contact.html
output/tag/: github-pages.html  pelican.html
plugins/: bottles.py  link_card.py
src/: App.jsx  App.tsx  AppRoutes.jsx  AppRoutes.tsx  main.tsx
src/components/: InfoCard.jsx  LikesCard.jsx  NavBar.jsx  YoutubeEmbedApp.jsx  footer.tsx  navbar.tsx
src/home/: Home.jsx  Home.tsx
src/pages/: home.tsx
src/profile/: Profile.jsx  Profile.tsx
src/tool/: Tool.jsx
src/tools/: Tools.css  Tools.tsx
(+89 files in other folders)
