[project]
name = "shima10-x1p-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pelican[markdown]>=4.11.0.post0",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
